2011-05-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.h src/datafile.c src/plot2d.c src/plot3d.c:
	Change prototype of df_set_key_title_columnhead() to match that of
	df_set_key_title().

2011-05-05  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_set_font) src/win/wgraph.c (drawgraph): Defer
	determination of default font name and size. Fixes bug addressed
	by change of 2010-02-22, but without the need for do_string_replot()

	* src/win/wgraph.c (drawgraph): New variable fill_color to track
	color of fills. Use cached color brush for transparent solid fills
	instead of creating a new one.

	* src/win/wgraph.c (drawgraph) src/win/wgdiplus.c|h: Add support for
	antialiased solid filled (transparent) polygons.

	* src/win/wpause.c (WndPauseProc): Use default dialog font instead of
	fixed width font for pause dialog.

	* src/readline.c (readline): Tab is a printable character in some
	locales, ie. isprint(TAB)>0.

	* src/win/wgraph.c (MakeFonts): Reduce size of tics and point symbols
	by 20%.

2011-05-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Build support for lua tikz related TeX files.
	Use Makefile.maint to update version.c. Update install target to match
	directory layout of distribution and include share/lua/, share/LaTeX/, 
	contrib/, demo/, README, NEWS, Copyright and ChangeLog.

2011-05-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/variable.c (locale_handler): If built-in readline character input
	is to recognize UTF-8 characters via wcwidth(), it is necessary to 
	initialize the CTYPE locale on entry. "set encoding utf" is not
	sufficient.

2011-05-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (tab_completion, fn_completion, readline) NEWS:
	Cycling variant of filename tab-completion for builtin readline.

	* src/stdfn.c|h (strnlen, strndup) configure.in config/config.nt
	config/config.mgw config/config.oww: Support functions used by
	tab-completion code.
